--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 Copyright notice. !!!! ))))
 -->
 <head>
-	<title>A very Simple title</title>
+	<title>A very Simple title with bullshit</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@ Copyright notice. !!!! ))))
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some bullshit
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Company OOP 2014</p>
 	</footer>
 </body>
 </html>
